--- a/index.html
+++ b/index.html
@@ -75,20 +75,18 @@
 
           <div>
               <div class="desc-dark">
-                  <p><i class="pe-2 fa-solid fa-circle-half-stroke"
+                  <p class="cor"><i class="pe-2 fa-solid fa-circle-half-stroke"
                           style="color: #ffffff;"></i> Modo Escuro</p>
+                          
               </div>
               <input type="checkbox" class="checkbox" id="escuro">
+              <!-- <button type="checkbox" class="btn btn-light" id="escuro">Light</button> -->
+              <!-- <button type="button" class="btn btn-dark" id="escuro">Dark</button> -->
               <label class="label" for="escuro">
                   <div class="ball"></div>
               </label>
           </div>
       </div>
-      
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
 
     </nav>
 
@@ -167,16 +165,7 @@
     </div>
   </header>
 
-  <div>
-      <input type="text" id="pesquisar-produto" placeholder="Pesquisar produto">
-    <ul id="lista-produtos">
-      <li>Produto 1</li>
-      <li>Produto 2</li>
-      <li>Produto 3</li>
-      <li>Produto 4</li>
-    <!-- Adicione mais produtos conforme necessário -->
-    </ul>
-  </div>
+
 
   <main class="dark-mode">
     <section class="main">
